--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ reqwest = { version = "0.11", features = ["json", "blocking"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 clap = { version = "4.0", features = ["derive"] }
+palette = "0.6"
 
 [build-dependencies]
 dotenv = "0.15"
