--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 clap = { version = "4.0", features = ["derive"] }
 palette = "0.6"
+quick-xml = { version = "0.23", features = ["serialize"] }
 
 [build-dependencies]
 dotenvy = "0.15.7"
